<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.estudiantesbrandon.FormActivity">

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_my_form"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_nombre"
            android:maxLength="20"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTitle" />

        <EditText
            android:id="@+id/edtInspiracion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_deportista"
            android:maxLength="20"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

        <EditText
            android:id="@+id/edtDeporte"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_inspiracion"
            android:maxLength="20"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtInspiracion" />


        <Spinner
            android:id="@+id/spnGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:entries="@array/Genero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDeporte" />

        <RadioGroup
            android:id="@+id/rgdHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnGenero" >

            <RadioButton
                android:id="@+id/rdbUnfinishedStudies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_MasHoras"/>
            <RadioButton
                android:id="@+id/rdbUniversityIntern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_Menos"/>
            <RadioButton
                android:id="@+id/rdbFinishedStudies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_Nada"/>
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="440dp" />

        <CheckBox
            android:id="@+id/ckbFutbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_Fut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <CheckBox
            android:id="@+id/ckbBasquet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_Basq"
            app:layout_constraintStart_toEndOf="@+id/ckbFutbol"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <CheckBox
            android:id="@+id/ckbTenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_Ten"
            app:layout_constraintStart_toEndOf="@+id/ckbBasquet"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtSalud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_Enfermedad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Button
            android:id="@+id/ButtonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swtSalud" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>